Review Request 9763 see PLS-2529 - fix for failing on to large of file sizes for file uploading - fix for too many columns in dataset upload - change to error banner to make it accommodate wrapping text

--- a/le-ui/projects/common/assets/sass/_messaging.scss
+++ b/le-ui/projects/common/assets/sass/_messaging.scss
@@ -1,4 +1,5 @@
 .messaging {
+	position: relative;
 	padding: 10px 20px;
 	margin-bottom: 20px;
 	border-style: solid;
@@ -6,7 +7,6 @@
 	border-color: transparent;
 	vertical-align: baseline;
     word-wrap: break-word;
-
 	&.error-messaging {
 		color: #fff;
 		background-color: #D22027;
@@ -26,7 +26,9 @@
 		vertical-align: middle;
 	}
 	.close, .link-button.close-button {
-		float: right;
+		position: absolute;
+		top: 0;
+		right: 0;
 		opacity: .8;
 		border: none;
 		background: transparent;
